# sdl-sys-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
sdl-bindgen/: Cargo.toml
sdl-bindgen/src/: config.rs  fs_utils.rs  main.rs  target.rs
sdl-build-helper/: Cargo.toml
sdl-build-helper/src/: lib.rs
sdl-image-sys/: Cargo.toml  build.rs
sdl-main-wrapper/: Cargo.toml
sdl-main-wrapper/src/: lib.rs
sdl-mixer-sys/: Cargo.toml  build.rs
sdl-mixer-sys/src/: lib.rs
sdl-sys-bindgen/: Cargo.toml  build.rs
sdl-ttf-sys/: Cargo.toml  build.rs
sdl3-gfx-sys/: Cargo.toml  build.rs
sdl3-gfx-sys/src/: lib.rs
submodules/SDL3_gfx/: CMakeLists.txt
submodules/SDL3_gfx/src/: SDL3_framerate.c  SDL3_gfxPrimitives.c  SDL3_imageFilter.c  SDL3_rotozoom.c
submodules/SDL3_gfx/test/: CMakeLists.txt
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs
xtask/src/bindgen/: callbacks.rs  config.rs  constants.rs  fs_utils.rs  initiate.rs  mod.rs
