[package]
name = "sdl-build-helper"
version = "0.1.0"
description = "Internal library for building and linking SDL in use with bindgen"
repository = "https://github.com/achusbyr/sdl-sys-rs"
license = "Zlib"
edition = "2024"

[dependencies]
pkg-config = { version = "0.3", optional = true }
git2 = { version = "0.20", optional = true }
cmake = { version = "0.1", optional = true }
vcpkg = { version = "0.2", optional = true }
cc = "1.0"

[features]
build-from-source = ["dep:cmake", "dep:git2"]
use-pkg-config = ["dep:pkg-config"]
use-vcpkg = ["dep:vcpkg"]
