[package]
name = "sdl-image-sys"
version = "0.1.0+3.5.0-19cc7cdb1e30554d3bf4f4526a21a8f57b861279"
edition = "2024"
description = "Alternative bindings for SDL3_image using bindgen"
repository = "https://github.com/achusbyr/sdl-sys-rs"
license = "Zlib"
links = "SDL3_image"

[features]
default = []
build-from-source = ["sdl-sys-bindgen/build-from-source"]
link-static = ["sdl-sys-bindgen/link-static"]
use-pkg-config = ["sdl-sys-bindgen/use-pkg-config"]
use-vcpkg = ["sdl-sys-bindgen/use-vcpkg"]

[dependencies]
sdl-sys-bindgen = { path = "../sdl-sys-bindgen", version = "0.1" }

[build-dependencies]
sdl-build-helper = { path = "../sdl-build-helper", version = "0.1", default-features = false }
