[package]
name = "sdl-image-sys"
version = "0.1.3+3.5.0-b5ae5e2336b510e77891d6a7292f852b4b38a7d0"
edition = "2024"
description = "Alternative bindings for SDL3_image using bindgen"
repository = "https://github.com/achusbyr/sdl-sys-rs"
license = "Zlib"
links = "SDL3_image"
categories = ["external-ffi-bindings"]
keywords = ["sdl", "ffi", "image"]

[features]
build-from-source = ["sdl-build-helper/build-from-source"]
use-pkg-config = ["sdl-build-helper/use-pkg-config"]
use-vcpkg = ["sdl-build-helper/use-vcpkg"]
link-static = []

[dependencies]
sdl-sys-bindgen = { path = "../sdl-sys-bindgen", version = "0.1" }

[build-dependencies]
sdl-build-helper = { path = "../sdl-build-helper", version = "0.1" }
