[package]
name = "sdl-main-wrapper"
version = "0.1.1"
edition = "2024"
description = "Wrapper over SDL's callback-based app loop"
repository = "https://github.com/achusbyr/sdl-sys-rs"
license = "Zlib"
categories = ["api-bindings"]
keywords = ["sdl", "sdl3", "wrapper", "main"]

[features]
default = ["alloc"]
args = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
sdl-sys-bindgen = { path = "../sdl-sys-bindgen", version = "0.1" }
