[package]
name = "sdl-sys-bindgen"
version = "0.1.2+3.5.0-0e50195d3790184b2c9f38d441de0693b14229db"
edition = "2024"
description = "Alternative bindings for SDL using bindgen"
repository = "https://github.com/achusbyr/sdl-sys-rs"
license = "Zlib"
links = "SDL3"

[features]
build-from-source = ["sdl-build-helper/build-from-source"]
use-pkg-config = ["sdl-build-helper/use-pkg-config"]
use-vcpkg = ["sdl-build-helper/use-vcpkg"]
link-static = []

[build-dependencies]
sdl-build-helper = { path = "../sdl-build-helper", version = "0.1" }
