[package]
name = "sdl-sys-bindgen"
version = "0.1.3+3.5.0-788bd816e7c3d90ba7eaa3b3703a384e1ef50483"
edition = "2024"
description = "Alternative bindings for SDL using bindgen"
repository = "https://github.com/achusbyr/sdl-sys-rs"
license = "Zlib"
links = "SDL3"
categories = ["external-ffi-bindings"]
keywords = ["sdl", "sdl3", "ffi", "bindings"]

[features]
build-from-source = ["sdl-build-helper/build-from-source"]
use-pkg-config = ["sdl-build-helper/use-pkg-config"]
use-vcpkg = ["sdl-build-helper/use-vcpkg"]
link-static = []

[build-dependencies]
sdl-build-helper = { path = "../sdl-build-helper", version = "0.1" }
