[package]
name = "sdl-ttf-sys"
version = "0.1.0+3.3.0-a49130e3ecc0ad5a4aad12083e9aeab57ac34dbd"
edition = "2024"
description = "Alternative bindings for SDL3_ttf using bindgen"
repository = "https://github.com/achusbyr/sdl-sys-rs"
license = "Zlib"
links = "SDL3_ttf"

[features]
default = []
build-from-source = ["sdl-sys-bindgen/build-from-source"]
link-static = ["sdl-sys-bindgen/link-static"]
use-pkg-config = ["sdl-sys-bindgen/use-pkg-config"]
use-vcpkg = ["sdl-sys-bindgen/use-vcpkg"]

[dependencies]
sdl-sys-bindgen = { path = "../sdl-sys-bindgen", version = "0.1" }

[build-dependencies]
sdl-build-helper = { path = "../sdl-build-helper", version = "0.1", default-features = false }
