[package]
name = "sdl-ttf-sys"
version = "0.1.3+3.3.0-2eabf8bcdf56a7a9adcb8c3505399d922a6f1007"
edition = "2024"
description = "Alternative bindings for SDL3_ttf using bindgen"
repository = "https://github.com/achusbyr/sdl-sys-rs"
license = "Zlib"
links = "SDL3_ttf"
categories = ["external-ffi-bindings"]
keywords = ["sdl", "sdl3", "ffi", "bindings", "ttf", "font"]

[features]
build-from-source = ["sdl-build-helper/build-from-source"]
use-pkg-config = ["sdl-build-helper/use-pkg-config"]
use-vcpkg = ["sdl-build-helper/use-vcpkg"]
link-static = []

[dependencies]
sdl-sys-bindgen = { path = "../sdl-sys-bindgen", version = "0.1" }

[build-dependencies]
sdl-build-helper = { path = "../sdl-build-helper", version = "0.1" }
