[package]
name = "sdl3-gfx-sys"
version = "0.1.1+1.0.0-main"
edition = "2024"
description = "Bindings for SDL3_gfx using bindgen"
repository = "https://github.com/achusbyr/sdl-sys-rs"
license = "Zlib"
links = "SDL3_gfx"

[features]
default = []
build-from-source = ["sdl-sys-bindgen/build-from-source"]
link-static = ["sdl-sys-bindgen/link-static"]
use-pkg-config = ["sdl-sys-bindgen/use-pkg-config"]
use-vcpkg = ["sdl-sys-bindgen/use-vcpkg"]

[dependencies]
sdl-sys-bindgen = { path = "../sdl-sys-bindgen", version = "0.1" }

[build-dependencies]
sdl-build-helper = { path = "../sdl-build-helper", version = "0.1", default-features = false }
